# mn-blueprints

./: .gitignore  BLUEPRINT_STANDARD.md  PRODUCT_QUALITY_AUDIT.md  README.md  category.json  index.json  patch_dock_drug.py  patch_shared.py  pytest.ini  renamed_blueprints.json  test_mock.py
adaptive_experiment_planning/: README.md  SPEC.md  manifest.json  scenario.json
ai_audit_readiness/: README.md  SPEC.md  manifest.json
ai_control_readiness_assistant/: README.md  SPEC.md  manifest.json
ai_strategy_advisory_assistant/: README.md  SPEC.md  manifest.json
ai_strategy_planning/: README.md  SPEC.md  manifest.json
business_ai_control_room/: README.md  SPEC.md  manifest.json
business_ai_strategy_workbench/: README.md  SPEC.md  manifest.json
business_context_memory_compression_code_analsysis/: README.md  SPEC.md  manifest.json
business_customer_lifecycle_email_copilot/: README.md  SPEC.md  config.py  manifest.json
business_dynamic_pricing_profit_optimizer/: README.md  SPEC.md  manifest.json  scenario.json
business_email_campaign_deamon/: README.md  config.py  manifest.json
claim_risk_triage/: SPEC.md  (+3 more)
finance_liquidity_microstructure_radar/payloads/fake_stock_stream/_shared_skills/generate_fake_data_skill/: pyproject.toml
finance_liquidity_microstructure_radar/payloads/fake_stock_stream/_shared_skills/generate_fake_data_skill/src/generate_fake_data_skill.egg-info/: PKG-INFO  requires.txt
finance_liquidity_microstructure_radar/payloads/fake_stock_stream/_shared_skills/generate_fake_data_skill/src/mn_generate_fake_data_skill/: __main__.py  fake_data.py
(+1266 files in other folders)
