[project]
name = "generate-fake-data-skill"
version = "0.1.0"
description = "Generate batch or streaming fake data from JSON specs for MirrorNeuron blueprints."
requires-python = ">=3.9"
dependencies = ["Faker>=19"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
